--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<DOCTYPE! html>
+<!DOCTYPE html>
 
 <html>
 
@@ -7,11 +7,14 @@
 
 
 <body>
+
+
+  <footer>
+  </footer>
+
 </body>
 
 
-<footer>
-</footer>
 
 
 </html>
