--- a/index.html
+++ b/index.html
@@ -5,13 +5,45 @@
 <head>
   <title> Startup Matchmaker </title>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,600' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
+
+<body>
 
   <header>
     <h1> Startup Matchmaker </h1>
   </header>
 
-<body>
+<div id = "meetMatch">
+  <div id ="matchContent">
+  <h1> Meet your Match! </h1>
+    <p> Have a great idea for a product, but need help making it a reality? we're here to help.  Startup Matchmaker is the best place for designers and developers to find each other. </p>
+    <h3><a href="/js/components/signup.js"> Create Profile </a></h3>
+    <h3><a href="/js/components/team.js"> Find Match </a></h3>
+  </div>
+</div>
+
+<div id = "tagLine">
+  <h1> Because two heads are better than one.</h1>
+</div>
+
+<div id = "createProfile">
+  <h1> Create a Profile </h1>
+    <p> Want to build an app from scratch? Create a profile so others can find you! </p>
+    <h3><a href="/js/components/signup.js"> Sign Up Now </a></h3>
+</div>
+
+<div id = "findDeveloper">
+      <h1> Find a Developer </h1>
+        <p> Looking for a fantastic developer to work with on the next big thing? Look no further. </p>
+        <h3><a href="/js/components/team.js"> Start Your Search </a></h3>
+</div>
+
+<div id = "findDesigner">
+      <h1> Find a Designer </h1>
+        <p> Need someone who can make a product intuitive and appealing? Get ready. </p>
+        <h3><a href="/js/components/login.js"> Login </a></h3>
+</div>
 
   <footer>
     <p id="copyright">&copy; 2015 Startup Matchmaker. Made in LA.</p>
