--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 
 <head>
   <title> Startup Matchmaker </title>
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,600' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="/css/style.css">
+<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
