--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title> Startup Matchmaker </title>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="/css/base/splash.css">
 </head>
 
 <body>
@@ -27,6 +28,7 @@
   <h1> Because two heads are better than one.</h1>
 </div>
 
+<div class="moreInfo">
 <div id = "createProfile">
   <h1> Create a Profile </h1>
     <p> Want to build an app from scratch? Create a profile so others can find you! </p>
@@ -43,6 +45,7 @@
       <h1> Find a Designer </h1>
         <p> Need someone who can make a product intuitive and appealing? Get ready. </p>
         <h3><a href="/js/components/login.js"> Login </a></h3>
+</div>
 </div>
 
   <footer>
