--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title> Startup Matchmaker </title>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="/css/style.css">
-<link rel="stylesheet" href="/css/base/splash.css">
+<link rel="stylesheet" href="/css/splash.css">
 </head>
 
 <body>
