--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <div id ="matchContent">
   <h1> Meet your Match! </h1>
     <p> Have a great idea for a product, but need help making it a reality? we're here to help.  Startup Matchmaker is the best place for designers and developers to find each other. </p>
-    <h3><a href="/js/components/signup.js"> Create Profile </a></h3>
-    <h3><a href="/js/components/team.js"> Find Match </a></h3>
+    <h3><a href="/views/signup.html"> Create Profile </a></h3>
+    <h3><a href="/views/team.html"> Find Match </a></h3>
   </div>
 </div>
 
@@ -32,19 +32,19 @@
 <div id = "createProfile">
   <h1> Create a Profile </h1>
     <p> Want to build an app from scratch? Create a profile so others can find you! </p>
-    <h3><a href="/js/components/signup.js"> Sign Up Now </a></h3>
+    <h3><a href="/views/signup.html"> Sign Up Now </a></h3>
 </div>
 
 <div id = "findDeveloper">
       <h1> Find a Developer </h1>
         <p> Looking for a fantastic developer to work with on the next big thing? Look no further. </p>
-        <h3><a href="/js/components/team.js"> Start Your Search </a></h3>
+        <h3><a href="/views/team.html"> Start Your Search </a></h3>
 </div>
 
 <div id = "findDesigner">
       <h1> Find a Designer </h1>
         <p> Need someone who can make a product intuitive and appealing? Get ready. </p>
-        <h3><a href="/js/components/login.js"> Login </a></h3>
+        <h3><a href="/views/login.html"> Login </a></h3>
 </div>
 </div>
 
